--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "method-override": "^3.0.0",
+    "mongoose": "^6.5.0",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2"
   },
